# adlcv

./: .gitignore  README.md  pyproject.toml
ex1/: bert_classification.py  text_classification.py  transformer.py
ex3/: gpt.py  main.ipynb  requirements.txt  test.py  test_implementation.py  train.py
ex4/: ddpm.py  ddpm_train.py  playground.py
ex4/dataset/: sprites_dataset.py
ex4/runs/ddpm/: events.out.tfevents.1773582725.MacBook-Pro-tilhrende-Poul.local.12622.0
project/: README.md
project/notebooks/: 01_explore_data.ipynb  02_smoke_test_predictions.ipynb
project/src/: config.py
project/src/data/: annotations.py  dataset.py  images.py
project/src/partA/: preprocess.py  scale_bins.py  targets.py  text_embeddings.py
project/src/partB/: backbone.py  decoder.py  film.py  model.py  train.py  transformer.py
project/src/partC/: evaluate.py  inference.py  poster_figure.py  test_sets.py  visualize.py
