[project]
name = "adlcv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchtext>=0.6.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
